# two_spies

./: .gitignore  AGENTS.md  BUILD_SUMMARY.md  DEEP_COVER_IMPLEMENTATION.md  LICENSE  LOCATE_BUG_FIX.md  LOCATE_BUG_FIX_VERIFICATION.md  README.md  Requirements.md  debug-match-code.sh  docker-compose-prod.yml  docker-compose-staging.yml  docker-compose.yml  fix_all_tests.py  fix_intel_tests.py  fix_tests.py  fix_tests_global.py  generate_sounds.py  migration-plan.md  output.txt  package-lock.json  package.json  rewrite_tests.py  skills-lock.json  snap_to_land.py  test-locate-one-way.cpp  test-timeout.js  test_fixer.py  test_map.html  test_map.py
.claude/: settings.local.json
.github/: ARCHITECTURE.md  CODEBASE_GUIDE.md  CONVENTIONS.md  DATA_MODELS.md  DEVELOPMENT.md  GAME_MECHANICS.md  PROTOCOL.md  copilot-instructions.md
.github/workflows/: backend.yml  frontend.yml
backend/: .dockerignore  CMakeLists.txt  Dockerfile  test_output.txt
backend/include/config/: AbilityCosts.hpp  DefaultMap.hpp
backend/include/game/: CityGraph.hpp  GameState.hpp  Match.hpp  MatchManager.hpp  Player.hpp
backend/include/network/: Session.hpp  WebSocketServer.hpp
backend/include/protocol/: Messages.hpp
backend/scratch/: analyze_start_pos  analyze_start_pos.cpp
backend/src/: main.cpp
backend/src/game/: CityGraph.cpp  GameState.cpp  Match.cpp  MatchManager.cpp
backend/src/network/: Session.cpp  WebSocketServer.cpp
backend/src/protocol/: Messages.cpp
backend/tests/: CMakeLists.txt  TEST_COVERAGE.md  test_fix.py  test_fix2.py  test_fix3.py  test_fix4.py  test_fix5.py  test_map.hpp
backend/tests/integration/: test_abandonment.cpp
backend/tests/unit/: test_game_state.cpp  test_match_auto_end_turn.cpp  test_match_timeout.cpp  test_powerup_spawn.cpp
docs/: DEVELOPMENT.md  QUICK_START.md  Requirements.md  architecture.md  city_ui_visuals.md  concurrent_match_analysis.md  game_flow_cleanup.md  game_persistence_architecture.md  gameplay_screen_audit.md  user_journey.md
docs/game_design/: MECHANICS_REASONING.md  game_design_doc.md
docs/implementation_docs/: BUILD_SUMMARY.md  DEBUGGING_MATCH_CODE.md  DEEP_COVER_FIX_LOG.md  DEEP_COVER_IMPLEMENTATION.md  DEEP_COVER_NOTIFICATIONS_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  INTEL_INCREASE_VERIFICATION.md  INTEL_MECHANICS.md  MATCH_CODE_TESTING_GUIDE.md  (+5 more)
frontend/: TERMINAL_FIX_SUMMARY.md  check-terminal.mjs  compare-layouts.ts  debug-layout.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  verify-fullscreen.mjs  vite.config.ts
scripts/: deploy-staging.sh  docker-rebuild.sh  docker-run.sh  docker-stop.sh  rebuild-all.sh  rebuild-backend.sh  rebuild-frontend.sh
stitch-frontend/: .dockerignore  CodenameAuthorizationTerminal.js  Dockerfile  MissionDeploymentHub.js  MissionDeploymentHub.tsx  SecureLinkFrequency.js  SurveillanceCommandCenterGlobal.js  SurveillanceCommandCenterGlobal.tsx  SurveillanceCommandCenterGlobalMap.js  WorldMapCanvas.js  index.html  main.js  main.tsx  package-lock.json  package.json  tailwind.config.js  test-modal.mjs  test-navigation.mjs  test-rounded-modals.mjs  tsconfig.json  vite.config.ts
stitch_command_center/: DESIGN.md
tests/: test-basic-locate.js  test-check-field.js  test-deep-cover-field.js  test-deep-cover-flow.js  test-deep-cover-notifications.js  test-deep-cover-ws.js  test-deep-cover.js  test-fast-locate.js  test-inspect-state.js  test-intel-increase.js  test-intel-popups.js  test-locate-blocked.js  test-locate-one-way-ws.js  test-opponent-marker.js  test-simple-locate-trace.js  test-timeout-ws.js  test-trace-locate-blocked.js  verify-deep-cover-fix.cpp
(+84 files in other folders)
